# lifec_registry

./: .gitignore  BUILDING.md  Cargo.toml  README.md  acr-mirror.service  owners.txt  readme.md  send-guest-state.sh
.github/workflows/: rust-tag-release.yml
.pipelines/: OneBranch.PullRequest.yml
docs/: Untitled Diagram.drawio  auth.md  mirror-flowcharts.drawio
example/: mirror_manual.runmd
examples/: .runmd  acr.rs  local.rs  proxy.rs
examples/acr/: .runmd
lib/containerd/: .runmd
lib/debian/: acr-mirror.postinst  acr-mirror.prerm
lib/overlaybd/convert_images/: .runmd
lib/overlaybd/setup_env/: .runmd
lib/runmd/: .runmd  mirror.runmd
lib/sh/: entrypoint.sh  fetch-guest-commands.sh  fetch-guest-state.sh  format-nydus.sh  format-overlaybd.sh  import.sh  login-acr-admin.sh  login-acr.sh  monitor-guest.sh  send-guest-commands.sh
lib/sh/azure/: fetch-guest-commands.sh  fetch-guest-state.sh  monitor-guest.sh  query-guest-commands.sh  query-guest-state.sh  send-guest-commands.sh  send-guest-journal.sh  send-guest-performance.sh  send-guest-status.sh  setup-guest-storage.sh
lib/sh/overlaybd/: enable-file-auth.sh  enable-http-auth.sh  enable.sh  install-0.5.2-amd64.sh  install.sh
src/: access_provider.rs  artifact.rs  authenticate.rs  blob_import.rs  blob_upload_chunks.rs  blob_upload_monolith.rs  blob_upload_session_id.rs  content.rs  continue_req.rs  copy.rs  discover.rs  download.rs  download_blob.rs  error.rs  index.rs  lib.rs  list_tags.rs  login.rs  mirror.rs  proxy.rs  pull.rs  push_session.rs  resolve.rs  teleport.rs  upload.rs
src/config/: aks_azure_config.rs  azure_aks_config.rs  azure_imds_config.rs  azure_sdk_config.rs  containerd_config.rs  hosts_config.rs  login_config.rs  mod.rs  oauth_config.rs
src/content/: artifact_manifest.rs  contents.rs  descriptor.rs  image_index.rs  image_manifest.rs  local.rs  manifests.rs  overlaybd_artifact.rs  platform.rs  referrers_response.rs  registry.rs  upstream.rs
src/login/: acr.rs  overlaybd.rs
src/macros/: cfg.rs
src/mirror/: mirror_action.rs  mirror_proxy.rs
src/plugins/: artifact.rs  authenticate.rs  continue_req.rs  discover.rs  guest.rs  import.rs  login.rs  mirror.rs  mod.rs  proxy.rs  remote_registry.rs  resolve.rs  store.rs  teleport.rs
src/plugins/guest/: agent.rs  azure.rs  dispatcher.rs  guest.rs  monitor.rs
src/plugins/login/: acr.rs  nydus.rs  overlaybd.rs
src/plugins/mirror/: default_host.rs  host_capabilities.rs  mirror_host.rs
src/plugins/proxy/: manifests.rs  proxy_target.rs  resources.rs
src/plugins/teleport/: format_nydus.rs  format_overlaybd.rs  nydus.rs  overlaybd.rs
src/proxy/: auth.rs  blobs.rs  blobs_uploads.rs  config.rs  login.rs  manifests.rs  methods.rs  proxy_route.rs  proxy_target.rs  resolve.rs  resources.rs  tags.rs  tools.rs
src/proxy/auth/: auth_response.rs  oauth2_token.rs
src/proxy/config/: config_response.rs
src/proxy/login/: login_response.rs
src/proxy/proxy_target/: object.rs
src/teleport/: overlaybd.rs
tools/hyperv/: README.md  create-dev-box.ps1
tools/hyperv/configs/: overlaybd-dev.yml
