[package]
name = "lifec_registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.4", features = [ "derive" ] }
hyper = "0.14.20"
hyper-tls = "0.5.0"
imgui = "0.9.0"
lifec = { git = "https://github.com/juliusl/lifec.git", branch = "pr/refactor-workspace", features = [ "editor" ] }
lifec_poem = { git = "https://github.com/juliusl/lifec.git", branch = "pr/refactor-workspace" }
reality = { git = "https://github.com/juliusl/reality.git", branch = "pr/workspace-refactor" }
reality_azure = { git = "https://github.com/juliusl/reality.git", branch = "pr/workspace-refactor" }
# shinsu = { git = "https://github.com/juliusl/shinsu.git", branch = "pr/v2_api" }
# lifec = { path = "../lifec" }
specs = { version = "0.18.0", features = ["default", "derive", "shred-derive"] }
logos = "0.12.1"
native-tls = "0.2.10"
poem = { version = "1.3.32", features = ["server", "static-files", "native-tls", "test"] }
rust-embed = { version = "6.4.1", features = ["include-exclude"] }
serde = "1.0"
serde_json = "1.0.82"
tinytemplate = "1.2.1"
tokio = "1.20.1"
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber =  { version = "0.3", features = [ "env-filter" ] }
tracing-test = "0.2.3"
sha2 = "0.10.6"
